<resources>
    <string name="app_name">FAMO</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->
    <string name="none">없음</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>

    <!--Splash-->
    <string name="splash_title">쉽고 빠른 메모의 시작!</string>

    <!-- Main -->
    <string name="monthly">월간</string>
    <string name="today">오늘</string>
    <string name="find_schedule">일정 찾기</string>


    <!--Today -->
    <string name="check">확인</string>
    <string name="today_text_no_item">아직 작성한 메모가 없습니다.\n메모를 작성해주세요</string>
    <string name="today_rest_count_format">남은 일정 %s개</string>
    <string name="today_top_comment_goal_title_format">%s 까지</string>
    <string name="today_done_schedule_count_format">해낸 일정 %s개</string>
    <string name="today_dday_count_format"> "D-%s일 남았어요!"</string>
    <string name="today_top_comment_user_nickname_format">%s님</string>

    <!--Auth-->
    <string name="information1_title">빠르게 일정을 추가하세요</string>
    <string name="information2_title">친구들과 빠르게 일정을 공유하세요</string>
    <string name="information3_title">필요한 일정을 쉽게 찾으세요</string>
    <string name="information1_description">메인화면에서 일정을 바로 작성하고\n체크하여 쉽고 빠르게 관리할 수 있어요</string>
    <string name="information2_description">친구와 일정을 공유하고 싶다면\n 친구를 추가하여 빠르게 일정을 공유해요</string>
    <string name="information3_description">원하는 일정을 검색으로 찾을 수 있고\n카테고리로 분류하여 정리할 수 있어요</string>

    <!--Login -->
    <string name="login_greeting_text">안녕하세요!\n페모입니다.</string>
    <string name="login_text">로그인</string>
    <string name="login_text_id">아이디</string>
    <string name="login_text_password">비밀번호</string>
    <string name="login_text_find_id">아이디 찾기</string>
    <string name="login_hint_id">아이디 입력</string>
    <string name="login_hint_password">비밀번호 입력</string>
    <string name="login_text_find_password">비밀번호 찾기</string>


    <!--SignUp -->
    <string name="sign_up_hint_auth">11자리 입력</string>
    <string name="sign_up_hint_nickname">닉네임 입력</string>
    <string name="sign_up_hint_password">영문,숫자,특수문자 포함 8자 이상</string>
    <string name="sign_up_hint_id">아이디 입력</string>
    <string name="sign_up_btn_auth">인증요청</string>
    <string name="sign_up_btn_sign_up">가입하기</string>
    <string name="sign_up_text">회원가입</string>
    <string name="sign_up_text_id">아이디</string>
    <string name="sign_up_text_password">비밀번호</string>
    <string name="sign_up_text_re_password">비밀번호 확인</string>
    <string name="login_text_nickname">닉네임</string>
    <string name="login_text_phone_number">휴대폰 번호</string>


    <!--LoginInfo-->
    <string name="login_info_title">쉽고 빠른 메모의 시작!</string>
    <string name="login_info_btn_login">FAMO에 로그인하기</string>
    <string name="login_info_sign_up"><u>FAMO에 가입하기</u></string>
    <string name="login_info_find_id_password"><u>아이디/비밀번호 찾기</u></string>


    <string name="result_today_text_schedule_finished">오늘의 일정 완료</string>
    <string name="result_today_btn_head_to_my_result_page">나의 성과 확인하러 가기!</string>
    <string name="result_today_btn_next_time">다음에 할게요.</string>

    <string name="information_get_start">시작하기</string>

    <!--Add Memo -->
    <string name="add_memo_edit_schedule">일정 수정하기</string>
    <string name="add_memo_write_title">제목 입력</string>
    <string name="add_memo_add_schedule">오늘 일정 추가하기</string>
    <string name="add_memo_add_memo">일정 메모하기</string>
    <string name="add_memo_setting_time">시간 설정</string>
    <string name="add_memo_time">시간</string>
    <string name="add_memo_alarm">알람</string>
    <string name="add_memo_repeat">반복</string>
    <string name="add_memo_date">날짜</string>
    <!--My Page -->
    <string name="my_page_tv_title">내 정보</string>
    <string name="my_page_tv_name">님</string>
    <string name="my_page_tv_schedule">기말고사까지 D-20일\n남았어요!</string>
    <string name="my_page_tv_complete_schedule">해낸일정</string>
    <string name="my_page_tv_remain_schedule">남은일정</string>
    <string name="my_page_tv_all_schedule">전체일정</string>
    <string name="my_page_tv_schedule_achievement_rat">일정 달성률</string>
    <string name="my_page_tv_info_setting">정보 및 설정</string>
    <string name="my_page_tv_frined_add">친구 추가</string>
    <string name="my_page_tv_help">도움말</string>
    <string name="my_page_tv_notice">공지사항</string>
    <string name="my_page_tv_terms_of_service">이용약관</string>

    <string name="my_page_edit_tv_title">프로필 편집</string>
    <string name="my_page_edit_tv_phote_update">프로필 사진 변경</string>
    <string name="my_page_edit_tv_name">Name</string>
    <string name="my_page_edit_tv_top_ment">상단 멘트 설정</string>
    <string name="my_page_edit_tv_account_setting">계정 설정</string>
    <string name="my_page_edit_tv_logout">로그아웃</string>
    <string name="my_page_edit_tv_account_delete">탈퇴 및 계정 삭제</string>
    <string name="my_page_edit_tv_dday_setting">디데이 설정</string>
    <string name="my_page_edit_et_top_ment_hint">오늘 하루도 홧팅!</string>
    <string name="my_page_edit_tv_dday">까지</string>
    <string name="my_page_edit_tv_dday2">일 남았어요!</string>

    <string name="category_edit_tv_title">카테고리 편집</string>
    <string name="category_edit_et_add">카테고리명을 입력해주세요.</string>
    <string name="category_edit_tv_color">색상</string>
    <string name="category_edit_tv_complete">완료</string>
    <string name="category_edit_tv_add">카테고리 추가</string>

    <!--Find Schedule -->
    <string name="schedule_find_et_search_hint">검색어를 입력해주세요.</string>
    <string name="schedule_find_tag1">학교</string>
    <string name="schedule_find_tv_today">오늘의 </string>
    <string name="schedule_find_tv_today2"> 남았어요!</string>
    <string name="schedule_find_tv_bookmark">즐겨찾기</string>
    <string name="schedule_find_tv_lately">최근</string>
    <string name="schedule_find_tv_detail_see">자세히 보러가기</string>
    <string name="schedule_find_tv_whole_schedule">전체일정</string>

    <!--Find User-->
    <string name="find_user_text_toolbar">아이디/비밀번호 찾기</string>
    <string name="find_user_text_phone">휴대폰 번호</string>
    <string name="find_id_text_find_id">아이디 찾기</string>
    <string name="find_password_text_find_password">비밀번호 찾기</string>


    <!--Set New Password-->
    <string name="set_password_text_set_password">비밀번호 재설정</string>
    <string name="set_password_text_new_password">새로운 비밀번호</string>
    <string name="set_password_text_new_password_check">새 비밀번호 확인</string>
    <string name="set_password_hint_repassword">비밀번호 확인 입력</string>

    <string name="agree_tv_title">이용약관</string>
    <string name="agree_tv_join">동의하고 가입하기</string>
    <string name="agree_tv_agree">페모를 만나기 전에\n이용약관에 동의해주세요!</string>
    <string name="agree_tv_agree_guide">개인정보 수집 및 이용 안내</string>
    <string name="agree_tv_agree_guide_content">(‘https://www.makeus.in/\'이하 \'MAKE US’)은(는) 「개인
정보 보호법」 제30조에 따라 정부주체의 개인정보를 보호하
고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하
기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.\n
\n
○ 이 개인정보처리방침은 2021년 4월 1부터 적용됩니다.\n\n
제1조(개인정보의 처리 목적)
(‘https://www.makeus.in/\'이하 ‘MAKE US’)은(는) 다음의
 목적을 위하여 개인정보를 처리합니다.\n 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적
이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별
도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n

1. 홈페이지 회원가입 및 관리
회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인
증, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인
정보를 처리합니다.\n
2. 재화 또는 서비스 제공
본인인증을 목적으로 개인정보를 처리합니다.\n\n

제2조(개인정보의 처리 및 보유 기간)\n
① 은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체
로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기
간 내에서 개인정보를 처리·보유합니다.\n
② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.\n
1. &lt;홈페이지 회원가입 및 관리&gt;
&lt;홈페이지 회원가입 및 관리&gt;와 관련한 개인정보는 수집.이용
에 관한 동의일로부터&lt;준영구&gt;까지 위 이용목적을 위하여 보
유.이용됩니다.\n
보유근거 : 앱 회원정보 수집 등에 관한 기록\n\n

제3조(정보주체와 법정대리인의 권리·의무 및 그 행사방법)\n
① 정보주체는 FAMO에 대해 언제든지 개인정보 열람·정정·
삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n
② 제1항에 따른 권리 행사는FAMO에 대해 「개인정보 보호
법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송
(FAX) 등을 통하여 하실 수 있으며 FAMO은(는) 이에 대해 지
체 없이 조치하겠습니다.\n
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위
임을 받은 자 등 대리인을 통하여 하실 수 있습니다.\n이 경우
“개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호
서식에 따른 위임장을 제출하셔야 합니다.\n
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」
제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제
한 될 수 있습니다.\n
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정
보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할
수 없습니다.\n
⑥ FAMO은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭
제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이
거나 정당한 대리인인지를 확인합니다.\n\n

제4조(처리하는 개인정보의 항목 작성)\n
① 은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n
1&lt; 홈페이지 회원가입 및 관리&gt;
필수항목 : 휴대전화번호, 비밀번호, 로그인ID, 서비스 이용 기
록, 접속 로그, 쿠키\n\n

제5조(개인정보의 파기)\n
① FAMO은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정
보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파
기합니다.\n
② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거
나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개
인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별
도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보
존합니다.\n
2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜\n
③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.\n
1. 파기절차
은(는) 파기 사유가 발생한 개인정보를 선정하고, 의 개인정보
보호책임자의 승인을 받아 개인정보를 파기합니다.\n
2. 파기방법\n
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법
을 사용합니다.\n
종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하
여 파기합니다\n\n


제6조(개인정보의 안전성 확보 조치)\n

FAMO은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취
하고 있습니다.\n

1. 정기적인 자체 감사 실시\n
개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로
자체 감사를 실시하고 있습니다.\n\n

2. 개인정보 취급 직원의 최소화 및 교육
개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최
소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.
\n\n
3. 내부관리계획의 수립 및 시행
개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고
시행하고 있습니다.
\n\n
4. 개인정보의 암호화
이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되
고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송
데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도
보안기능을 사용하고 있습니다.\n\n
5. 개인정보에 대한 접근 제한
개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의
부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여
필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부
로부터의 무단 접근을 통제하고 있습니다.\n\n
6. 문서보안을 위한 잠금장치 사용
개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는
안전한 장소에 보관하고 있습니다.\n\n
7. 비인가자에 대한 출입 통제
개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이
에 대해 출입통제 절차를 수립, 운영하고 있습니다.
\n\n
제7조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한
사항)\n\n
① FAMO 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기
위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를
사용합니다.\n ② 쿠키는 웹사이트를 운영하는데 이용되는 서버
(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보
이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합
니다.\n\n 가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹
사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여
부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용
됩니다. \n\n나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도
구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.\n\n 다. 쿠키 저장을 거부할 경우 맞춤형
서비스 이용에 어려움이 발생할 수 있습니다.
\n\n
제8조 (개인정보 보호책임자)\n\n
① FAMO 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임
지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해
구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하
고 있습니다.\n
▶ 개인정보 보호책임자\n
성명 :손현주\n
직책 :디자이너\n
직급 :팀장\n
연락처 :01090690580, gusdl0106@naver.com\n
※ 개인정보 보호 담당부서로 연결됩니다.
\n\n
제9조(개인정보 열람청구)\n\n
정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열
람 청구를 아래의 부서에 할 수 있습니다.\n
은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록
노력하겠습니다.\n
\n\n
제10조(권익침해 구제방법)\n\n
정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정
보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터
등에 분쟁해결이나 상담 등을 신청할 수 있습니다.\n 이 밖에 기
타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의
하시기 바랍니다\n\n
1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.
kopico.go.kr)\n
2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.
kr)\n
3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)\n
4. 경찰청 : (국번없이) 182 (cyberbureau.police.go.kr)\n

「개인정보보호법」제35조(개인정보의 열람), 제36조(개인
정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정
에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작
위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이
정하는 바에 따라 행정심판을 청구할 수 있습니다.\n

※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(ww
w.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.\n
\n\n
제11조(개인정보 처리방침 변경)
\n① 이 개인정보처리방침은 2021년 4월 1부터 적용됩니다.</string>

</resources>