<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/set_password_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/set_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_password_text_set_password"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_marginTop="45dp"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_text_new_password"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/set_password_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/set_password_appbar" />

    <EditText
        android:id="@+id/set_password_edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/background_edit_auth"
        android:hint="@string/sign_up_hint_password"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/auth_button_text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_text_new_password"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/set_password_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/set_password_edit_password" />

    <EditText
        android:id="@+id/set_password_edit_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/background_edit_auth"
        android:hint="@string/set_password_hint_repassword"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="@color/auth_button_text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/set_password_btn"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/set_password_edit_repassword" />

</androidx.constraintlayout.widget.ConstraintLayout>